nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nfs-pod
  labels:
    name: nfs-pod
spec: 
  containers:
  - name: nfs-container
    image: d3fk/nfs-client:latest
    command:
      - sleep
      - "3600"
    volumeMounts:
    - name: nfsvol
      mountPath: /tmp
  restartPolicy: Always
  securityContext:
    fsGroup: 65534
    runAsUser: 65534
  volumes: 
    - name: nfsvol
      persistentVolumeClaim:
        claimName: kube-pvc
