nginx-deployment-rolling-update.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-dep
spec:
  selector:
     matchLabels:
       app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.9.1
        ports:
        - containerPort: 80
