web-01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-01
  labels:
    app: nginx
spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
